--- a/www/templates/tab-maptovenue.html
+++ b/www/templates/tab-maptovenue.html
@@ -1,6 +1,5 @@
 <ion-view view-title="Map To Venu">
-  <ion-content>
-
-
-  </ion-content>
+<ion-content ng-controller="MapCtrl">
+    <div id="map" data-tap-disabled="true"></div>
+</ion-content>
 </ion-view>
