Added login controller, state, view

--- a/www/templates/tab-bandsseen.html
+++ b/www/templates/tab-bandsseen.html
@@ -1,15 +1,22 @@
 <ion-view title="Bands I Have Seen">
 
+<ion-content ng-controller="MyController">
 
-<ion-content>
 
+<ion-header-bar align-title="left" ng-controller="MyController">
+  <div class="buttons">
+    <button class="button" ng-click="openModal()">Add</button>
+  </div>
+</ion-header-bar>
+
+<!--
   <ion-header-bar align-title="left">
-    <div ng-controller="BandsseenCtrl" class="buttons">
-      <button class="button" ng-click="openModal()">Add</button>
+    <div class="buttons">
+      <button class="button">Add</button>
     </div>
   </ion-header-bar>
 
-
+-->
 
 
 
